Fix width of Inspect panel's headings to avoid wrapping of labels (e.g. VEP consequence).  https://github.com/tonydisera/gene.iobio/issues/292

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -312,7 +312,7 @@ text
   .tooltip-header
     overflow-wrap: break-word
     text-align: right
-    width: 50px
+    width: 60px
     display: inline-block !important
     float: none
     color: $sidebar-label-color
@@ -320,7 +320,7 @@ text
   .tooltip-row
     width: 190px
     clear: both
-    margin-bottom: 3px
+    margin-bottom: 8px
 
   .tooltip-value
     overflow-wrap: break-word
@@ -330,6 +330,7 @@ text
     display: inline-block !important
     float: none
     color: $sidebar-text-color
+    vertical-align: bottom
     
 
   .tooltip-footer
